fix template action 6

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -19,17 +19,12 @@ jobs:
     name: 🚚 WhatsApp Notification API - Microservice
     runs-on: server-dell-jefri
     steps:
-      - uses: ReeganExE/github-action-job-id@v1.0
-        with:
-          expose-name: true
-
       - name: Set Time Zone, Get start datetime & Template Top
         run: |
           TZ=Asia/Jakarta
           echo "start_date=$(date +"%Y-%m-%d %T")" >> ${GITHUB_ENV}
-
           echo "template_top=*➥ REPORTER (${{ github.run_number }})*\n#GIT INFO...\nREPO: *${{ github.event.repository.name }}*\nBRANCH: *${{ github.ref_name }}*\n#USER...\nOWNER: *${{ github.repository_owner }}*\nPUSHER: *${{ github.event.pusher.name }}*\n#SERVER...\nRUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n" >> ${GITHUB_ENV}
-          echo "template_bottom=Please check https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}/jobs/${{ env.GH_JOB_0_ID }}" >> ${GITHUB_ENV}
+          echo "template_bottom=Please check https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}" >> ${GITHUB_ENV}
 
       - name: Send start report
         run: |
