--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -135,9 +135,9 @@ jobs:
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
 
-      - name: Test Error
-        run: |
-          anu
+      # - name: Test Error
+      #   run: |
+      #     anu
 
       - name: 📡 Docker Compose...
         run: |
