--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -51,85 +51,21 @@ jobs:
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
 
-      - name: F&R - DASHBOARD_ROOT
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "DASHBOARD_ROOT="
-          replace: "DASHBOARD_ROOT=${{ secrets.ENV_DASHBOARD_ROOT }}"
-          regex: false
-          include: ".env"
+      - name: Manual Replace
+        run: |
+          sed -i 's/DASHBOARD_ROOT=/DASHBOARD_ROOT=${{ secrets.ENV_DASHBOARD_ROOT }}/g' .env
 
-      # ----------------------------------------------------------------------
+          sed -i 's/JWT_SECRET_TOKEN=/JWT_SECRET_TOKEN=${{ secrets.ENV_JWT_SECRET_TOKEN }}/g' .env
 
-      - name: F&R - JWT_SECRET_TOKEN
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "JWT_SECRET_TOKEN="
-          replace: "JWT_SECRET_TOKEN=${{ secrets.ENV_JWT_SECRET_TOKEN }}"
-          regex: false
-          include: ".env"
+          sed -i 's/DB_HOST=/DB_HOST=${{ secrets.ENV_DB_HOST }}/g' .env
+          sed -i 's/DB_USER=/DB_USER=${{ secrets.ENV_DB_USER }}/g' .env
+          sed -i 's/DB_PASS=/DB_PASS=${{ secrets.ENV_DB_PASS }}/g' .env
+          sed -i 's/DB_NAME=/DB_NAME=${{ secrets.ENV_DB_NAME }}/g' .env
 
-      # ----------------------------------------------------------------------
+          sed -i 's/RABBIT_HOST=/RABBIT_HOST=${{ secrets.ENV_RABBIT_HOST }}/g' .env
 
-      - name: F&R - ENV_DB_HOST
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: 'DB_HOST='
-          replace: 'DB_HOST=${{ secrets.ENV_DB_HOST }}'
-          regex: false
-          include: '.env'
-
-      - name: F&R - ENV_DB_USER
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: 'DB_USER='
-          replace: 'DB_USER=${{ secrets.ENV_DB_USER }}'
-          regex: false
-          include: '.env'
-
-      - name: F&R - ENV_DB_PASS
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: 'DB_PASS='
-          replace: 'DB_PASS=${{ secrets.ENV_DB_PASS }}'
-          regex: false
-          include: '.env'
-
-      - name: F&R - ENV_DB_NAME
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: 'DB_NAME='
-          replace: 'DB_NAME=${{ secrets.ENV_DB_NAME }}'
-          regex: false
-          include: '.env'
-
-      # ----------------------------------------------------------------------
-
-      - name: F&R - RABBIT_HOST
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "RABBIT_HOST="
-          replace: "RABBIT_HOST=${{ secrets.ENV_RABBIT_HOST }}"
-          regex: false
-          include: ".env"
-
-      # ----------------------------------------------------------------------
-
-      # - name: F&R - REDIS_USER
-      #   uses: jacobtomlinson/gha-find-replace@v2
-      #   with:
-      #       find: "REDIS_USER="
-      #       replace: "REDIS_USER=${{ secrets.ENV_REDIS_USER }}"
-      #       regex: false
-      #       include: ".env"
-
-      # - name: F&R - REDIS_PASS
-      #   uses: jacobtomlinson/gha-find-replace@v2
-      #   with:
-      #       find: "REDIS_PASS="
-      #       replace: "REDIS_PASS=${{ secrets.ENV_REDIS_PASS }}"
-      #       regex: false
-      #       include: ".env"
+        # sed -i 's/REDIS_USER=/REDIS_USER=${{ secrets.ENV_REDIS_USER }}/g' .env
+        # sed -i 's/REDIS_PASS=/REDIS_PASS=${{ secrets.ENV_REDIS_PASS }}/g' .env
 
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
