--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -53,19 +53,19 @@ jobs:
 
       - name: Manual Replace
         run: |
-          sed -i 's/DASHBOARD_ROOT=/DASHBOARD_ROOT=${{ secrets.ENV_DASHBOARD_ROOT }}/g' .env
+          sed -i 's#DASHBOARD_ROOT=#DASHBOARD_ROOT=${{ secrets.ENV_DASHBOARD_ROOT }}#g' .env
 
-          sed -i 's/JWT_SECRET_TOKEN=/JWT_SECRET_TOKEN=${{ secrets.ENV_JWT_SECRET_TOKEN }}/g' .env
+          sed -i 's#JWT_SECRET_TOKEN=#JWT_SECRET_TOKEN=${{ secrets.ENV_JWT_SECRET_TOKEN }}#g' .env
 
-          sed -i 's/DB_HOST=/DB_HOST=${{ secrets.ENV_DB_HOST }}/g' .env
-          sed -i 's/DB_USER=/DB_USER=${{ secrets.ENV_DB_USER }}/g' .env
-          sed -i 's/DB_PASS=/DB_PASS=${{ secrets.ENV_DB_PASS }}/g' .env
-          sed -i 's/DB_NAME=/DB_NAME=${{ secrets.ENV_DB_NAME }}/g' .env
+          sed -i 's#DB_HOST=#DB_HOST=${{ secrets.ENV_DB_HOST }}#g' .env
+          sed -i 's#DB_USER=#DB_USER=${{ secrets.ENV_DB_USER }}#g' .env
+          sed -i 's#DB_PASS=#DB_PASS=${{ secrets.ENV_DB_PASS }}#g' .env
+          sed -i 's#DB_NAME=#DB_NAME=${{ secrets.ENV_DB_NAME }}#g' .env
 
-          sed -i 's/RABBIT_HOST=/RABBIT_HOST=${{ secrets.ENV_RABBIT_HOST }}/g' .env
+          sed -i 's#RABBIT_HOST=#RABBIT_HOST=${{ secrets.ENV_RABBIT_HOST }}#g' .env
 
-      # sed -i 's/REDIS_USER=/REDIS_USER=${{ secrets.ENV_REDIS_USER }}/g' .env
-      # sed -i 's/REDIS_PASS=/REDIS_PASS=${{ secrets.ENV_REDIS_PASS }}/g' .env
+      # sed -i 's#REDIS_USER=#REDIS_USER=${{ secrets.ENV_REDIS_USER }}#g' .env
+      # sed -i 's#REDIS_PASS=#REDIS_PASS=${{ secrets.ENV_REDIS_PASS }}#g' .env
 
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
